Now have scale and offset, could have checkbox for saturation.

--- a/cfg/OpenSimplexNoise.cfg
+++ b/cfg/OpenSimplexNoise.cfg
@@ -12,5 +12,7 @@ gen.add("feature_size_x", double_t, 2, "feature size x", 16.0, 0.1, 1024.0)
 gen.add("feature_size_y", double_t, 2, "feature size y", 16.0, 0.1, 1024.0)
 gen.add("feature_size_z", double_t, 2, "feature size z", 16.0, 0.1, 1024.0)
 gen.add("feature_size_t", double_t, 2, "feature size t", 16.0, 0.1, 1024.0)
+gen.add("scale", double_t, 2, "scale", 127.0, 0.1, 1024.0)
+gen.add("offset", double_t, 2, "offset", 127.0, 0.0, 255.0)
 
 exit(gen.generate(PACKAGE, "open_simplex_noise_ros", "OpenSimplexNoise"))
