--- a/cfg/OpenSimplexNoise.cfg
+++ b/cfg/OpenSimplexNoise.cfg
@@ -8,12 +8,18 @@ gen = ParameterGenerator()
 gen.add("width", int_t, 1, "width pixels", 640, 1, 2048)
 gen.add("height", int_t, 1, "height pixels", 480, 1, 2048)
 gen.add("frame_rate", double_t, 1, "frame rate Hz", 20, 0.1, 50)
+gen.add("clip", bool_t, 1, "clip instead of wrapping", False)
 # TODO(lucasw) have 3 or 4 different independent controls,
 # the results will be summed together
-gen.add("feature_size_x", double_t, 2, "feature size x", 16.0, 0.1, 1024.0)
-gen.add("feature_size_y", double_t, 2, "feature size y", 16.0, 0.1, 1024.0)
-gen.add("feature_size_t", double_t, 2, "feature size t", 16.0, 0.1, 1024.0)
-gen.add("scale", double_t, 2, "scale", 127.0, 0.1, 1024.0)
-gen.add("offset", double_t, 2, "offset", 127.0, 0.0, 255.0)
+for i in range(4):
+  si = str(i)
+  group = gen.add_group("octave_" + si)
+  group.add("offset_x" + si, double_t, 2, "offset x (fraction of width)", 0.0, -0.5, 0.5)
+  group.add("offset_y" + si, double_t, 2, "offset y (fraction of height)", 0.0, -0.5, 0.5)
+  group.add("feature_size_x" + si, double_t, 2, "feature size x", 64.0 / 2**i, 0.1, 1024.0)
+  group.add("feature_size_y" + si, double_t, 2, "feature size y", 64.0 / 2**i, 0.1, 1024.0)
+  group.add("feature_size_t" + si, double_t, 2, "feature size t", 64.0 / 2**i, 0.1, 1024.0)
+  group.add("scale" + si, double_t, 2, "scale output", 128.0 / 2**i, 0.0, 1024.0)
+  group.add("offset" + si, double_t, 2, "offset output", 0.0, 0.0, 255.0)
 
 exit(gen.generate(PACKAGE, "open_simplex_noise_ros", "OpenSimplexNoise"))
